--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./restapi
+      run: go build -v .
 
     - name: Test
       run: go test -v .
